# opensource-data-platform

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.planning/: PROJECT.md  config.json
airflow/dags/: backup_dag.py  dbt_clickhouse_dag.py  spark_example_dag.py
airflow/dags/marquez-demo/: daily_report.py
airflow/dags/plugins/providers/odcs/: __init__.py  provider.yaml  pyproject.toml
airflow/dags/plugins/providers/odcs/operators/: odcs.py
airflow/dags/plugins/providers/soda/: __init__.py  provider.yaml  pyproject.toml
airflow/dags/plugins/providers/soda/operators/: soda.py
airflow/plugins/: docker_secrets_backend.py
config/: airflow.cfg
dags/marquez-demo/: etl_orders.py
data-contracts/: README.md  orders_contract.yaml
data/landing/hr/: hr_departments.csv  hr_employee_events.csv  hr_employees.csv  hr_locations.csv
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: fct_orders.sql
dbt/models/staging/: schema.yml  stg_orders.sql
docker/airflow/: Dockerfile  docker-compose.yaml
docker/clickhouse/single-node/: docker-compose.yaml
docker/marquez/: docker-compose.yaml
docker/minio/: docker-compose.yaml
docker/mock-servicenow/: Dockerfile  docker-compose.yaml
docker/mock-servicenow/app/: data.py  main.py
docker/postgres/: docker-compose.yaml  init-db.sh
docs/: cdc_pipeline.md
infra/: ARCHITECTURE.md  README.md
infra/dev/compose/: airflow.lite.yaml  clickhouse.yaml  debezium.yaml  flink.yaml  hashicorp-vault.yaml  kafka.yaml  local-executor-akv-secret-backend.yaml  mssql.yaml  openbao.yaml  polaris.yaml  ranger.yaml  redpanda.yaml  rustfs.yaml  seaweedfs.yaml  spark.yaml  trino.yaml  vault.yaml
infra/docker-stack/ansible/: deploy-airflow.yml  deploy-databases.yml
infra/docker-stack/compose/: airflow-init.yaml  airflow.yaml  analytics.yaml  data-platform.yml  databases.yaml  hashicorp-vault.yaml  monitor.yaml  openbao.yaml  secrets.yaml  storage.yaml  streaming.yaml
infra/docker-stack/config/: openbao.hcl
infra/k8s-stack/: README.md  helmfile.yaml
infra/labs/azure/: README.md
infra/production/: README.md
infra/terraform/: .terraform.lock.hcl  README.md  cloud-init.yaml.tftpl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
setup/: Makefile  generate.sh  pyproject.toml
setup/context/: BUSINESS_MODEL.md
setup/context/synthetic-data-generation/: DOMAIN_FINOPS.md  DOMAIN_HR.md  DOMAIN_OPS.md  OVERALL_PLAN.md
setup/finops/: generate.sh
setup/finops/data/: eng_incidents.csv  finops_cloud_resources.csv  finops_daily_billing.csv  finops_incident_types.csv
setup/finops/scripts/: generate_billing.py  generate_incidents.py  generate_resources.py
setup/hr/: generate.sh
setup/hr/recipes/: hr_generation.yml
setup/hr/scripts/: enrich_hierarchy.py  generate_events.py
setup/ops/: generate.sh
setup/ops/data/: ops_projects.csv  ops_resource_allocations.csv  ops_timesheets.csv
setup/ops/scripts/: generate_allocations.py  generate_projects.py  generate_timesheets.py
setup/salesforce/: Makefile  README.md  pyproject.toml  sfdx-project.json
setup/salesforce/data/: Account.csv  Contact.csv  Opportunity.csv  csvw_metadata.json
setup/salesforce/docs/: PIPELINE_ANALYTICS_PLAYBOOK.md
setup/salesforce/force-app/main/default/objects/Account/fields/: Account_Owner_Employee_ID__c.field-meta.xml  Customer_Segment__c.field-meta.xml  Engagement_Model__c.field-meta.xml  Parent_Relationship_Type__c.field-meta.xml  Primary_Offering__c.field-meta.xml  Region__c.field-meta.xml  SaaS_Tier__c.field-meta.xml  Services_Line__c.field-meta.xml
setup/salesforce/force-app/main/default/objects/Opportunity/fields/: Contract_Model__c.field-meta.xml  Cross_Sell_From__c.field-meta.xml  Data_Volume_Tier__c.field-meta.xml  Expected_ARR__c.field-meta.xml  Implementation_Months__c.field-meta.xml  Offering_Type__c.field-meta.xml  Sales_Motion__c.field-meta.xml  Usage_Pricing_Model__c.field-meta.xml
setup/salesforce/force-app/main/default/permissionsets/: Synthetic_Data_Loader.permissionset-meta.xml
setup/salesforce/recipes/: sales_pipeline.yml
setup/salesforce/scripts/: assign_account_owners.py  enrich_sales_pipeline_csv.py  load_sales_pipeline.py  purge_sales_data.py  sf_auth.py
soda/: configuration.yml
soda/checks/: orders_checks.yml  postgres_checks.yml
sql/ddl/: finops.sql  human_resource.sql  operations.sql
tests/mock-servicenow/: conftest.py  test_auth.py  test_incidents.py
tests/salesforce/: conftest.py  test_enrich_sales_pipeline_csv.py  test_load_sales_pipeline.py  test_purge_sales_data.py  test_sf_auth.py
(+114 files in other folders)
