[project]
name = "opensource-data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==3.1.7",
    "apache-airflow-providers-openlineage>=2.10.1",
    "apache-airflow-providers-postgres>=6.5.3",
    "apache-airflow-providers-salesforce>=5.12.2",
    "apache-airflow-providers-sqlite==4.2.1",
    "duckdb>=1.5.1",
    "duckdb-engine>=0.17.0",
    "polars>=1.37.1",
    "simple-salesforce>=1.12.9",
]

[dependency-groups]
dev = [
    "faker>=37.0.0",
    "httpx>=0.28.0",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "pytz>=2025.2",
    "mypy>=1.20.0",
]

[tool.pytest.ini_options]
pythonpath = ["docker/mock-servicenow"]
