[project]
name = "opensource-data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==3.2.0",
    "apache-airflow-providers-celery>=3.17.1",
    "apache-airflow-providers-fab>=3.5.0",
    "apache-airflow-providers-openlineage>=2.12.0",
    "apache-airflow-providers-postgres>=6.6.1",
    "apache-airflow-providers-sqlite==4.3.0",
    "duckdb>=1.5.1",
    "duckdb-engine>=0.17.0",
    "polars>=1.39.3",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "faker>=37.0.0",
    "httpx>=0.28.0",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "pytz>=2025.2",
    "mypy>=1.20.0",
]

[tool.pytest.ini_options]
pythonpath = ["docker/mock-servicenow"]
