[project]
name = "opensource-data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "apache-airflow-providers-amazon>=9.0.0",
    "apache-airflow-providers-apache-flink>=0.1.0",
    "apache-airflow-providers-apache-kafka>=1.3.0",
    "apache-airflow-providers-apache-spark>=4.10.0",
    "astronomer-cosmos[dbt-clickhouse]>=1.8.0",
    "apache-airflow-providers-celery>=3.17.1",
    "apache-airflow-providers-fab>=3.5.0",
    "apache-airflow-providers-hashicorp>=3.6.0",
    "apache-airflow-providers-openlineage>=2.12.0",
    "apache-airflow-providers-postgres>=6.6.1",
    "apache-airflow-providers-sqlite==4.3.0",
    "apache-airflow-providers-trino>=5.7.0",
    "dbt-clickhouse>=1.8.0",
    "dbt-core>=1.8.0",
    "duckdb>=1.5.1",
    "duckdb-engine>=0.17.0",
    "polars>=1.39.3",
    "psycopg2-binary>=2.9.11",
    "soda-core-clickhouse>=3.4.0",
    "soda-core-postgres>=3.4.0",
    "statsd>=4.0.1",
]

[dependency-groups]
dev = [
    "apache-airflow==3.2.0",
    "faker>=37.0.0",
    "httpx>=0.28.0",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "pytz>=2025.2",
    "mypy>=1.20.0",
]

[tool.pytest.ini_options]
